--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
 <footer class="mt-auto lh-lg bg-dark bg-gradient">
     <ul class="list-group list-group-flush d-flex flex-row justify-content-center" id="bottomMenu">
         <li class="list-group-item bg-transparent text-white">
-            <a class="nav-link" href="https://github.com/KorotkyiAnton/Notice_Kursova" target="_blank">Git Hub</a>
+            <a class="nav-link" href="https://github.com/KorotkyiAnton/diplom" target="_blank">Git Hub</a>
         </li>
         <li class="list-group-item bg-transparent text-white ">
-            <a class="nav-link" href="https://korotkyianton.github.io/Notice_Kursova/index.html" target="_blank">Git Page</a>
+            <a class="nav-link" href="https://korotkyianton.github.io/diplom/index.html" target="_blank">Git Page</a>
         </li>
         <li class="list-group-item bg-transparent text-white ">
             <a class="nav-link"
@@ -136,7 +136,7 @@
         </li>
     </ul>
     <div class="collapse text-white mb-4" id="aboutUs">
-        <span class="d-flex justify-content-center">Курсова робота "Менеджер нотаток" виконана студентом групи КІУКІ-19-6 Коротким Антоном</span>
+        <span class="d-flex justify-content-center">Кваліфікаційна робота "Менеджер нотаток" виконана студентом групи КІУКІ-19-6 Коротким Антоном</span>
     </div>
 </footer>
 </body>
